Add basic-raid-stable schema.
